tests/typing/pass/smoke/smoke.act
contract A

constructor()
creates

transition f(uint x) : uint256
storage

returns 1