tests/typing/fail/multipledef/multipledef.act
contract LValue

constructor()

creates

	uint x := 2
	bool x := false
